# hoverstare

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  Dockerfile  README.de.md  README.es.md  README.fr.md  README.md  README.ru.md  README.zh-CN.md  action.yml
.agents/rules/: 01-spec-first.md  02-security.md  03-architecture.md  04-testing.md  05-release.md  06-llm-providers.md
.github/: hoverstare.toml
.github/workflows/: action-test.yml  bugbot.yml  ci.yml  hoverstare.yml  release.yml  reposcope.yml
crates/bugbot/: Cargo.toml  README.md
crates/bugbot/src/: lib.rs  main.rs
docs/: deploy.md  pipeline.md
docs/readme/: README.de.md  README.es.md  README.fr.md  README.ru.md  README.zh-CN.md
examples/: demo_stats.rs  local_review.rs
specs/: 00-overview.md  01-cli-config.md  02-github-client.md  03-diff-engine.md  04-agent-backend.md  05-review-pipeline.md  06-report-publish.md  07-incremental-state.md  08-action-packaging.md  09-mention-commands.md  10-serve-mode.md  11-agent-dev.md  12-permissions.md  README.md  validation-2026-07-18.md
spikes/rig-kimi-probe/: Cargo.toml  README.md
spikes/rig-kimi-probe/src/: main.rs
src/: cli.rs  config.rs  devagent.rs  develop.rs  diff.rs  event.rs  findings.rs  git.rs  github.rs  i18n.rs  instructions.rs  lib.rs  main.rs  mention.rs  orchestrator.rs  pipeline.rs  prompt.rs  report.rs  state.rs
src/agent/: mod.rs  rig_backend.rs  tools.rs
src/serve/: auth.rs  job.rs  mod.rs  webhook.rs
tests/: github_client.rs
tests/fixtures/: buggy.diff  setup_caller_repo.sh
tests/fixtures/caller_repo/: ids_new.rs  ids_old.rs  lib.rs  store.rs
