[package]
name = "bugbot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
futures = "0.3.32"
globset = "0.4"
ignore = "0.4.30"
jsonschema = "0.48.0"
regex = "1.13.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rig-core = "0.36"
secrecy = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.11.0"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
httpmock = "0.8.3"
tempfile = "3"
