[package]
name = "hoverstare"
version = "0.0.6"
edition = "2024"
description = "Repo-aware AI code review bot for GitHub PRs: agentic multi-pass review with voting, precise inline comments, incremental finding tracking"
repository = "https://github.com/liuchong/hoverstare"
homepage = "https://github.com/liuchong/hoverstare"
documentation = "https://github.com/liuchong/hoverstare/tree/master/specs"
readme = "README.md"
keywords = ["code-review", "github-actions", "llm", "ai", "pull-request"]
categories = ["development-tools", "development-tools::build-utils"]
license-file = "LICENSE"
exclude = [
    "specs/",
    "spikes/",
    "tests/fixtures/",
    ".github/",
    "crates/",
    "docs/",
    "AGENTS.md",
]

[workspace]
members = ["crates/*"]

[dependencies]
anyhow = "1"
async-trait = "0.1"
axum = "0.8.9"
clap = { version = "4", features = ["derive"] }
dashmap = "6.2.1"
futures = "0.3"
globset = "0.4"
hmac = "0.13.0"
ignore = "0.4"
jsonschema = "0.48"
jsonwebtoken = { version = "10.4.0", default-features = false, features = ["aws_lc_rs", "use_pem"] }
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rig-core = "0.36"
secrecy = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.11"
tempfile = "3"
sha2 = "0.11.0"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
httpmock = "0.8"
