[package]
name = "bugbot"
version = "0.0.8"
edition = "2024"
description = "Repo-aware AI code review bot for GitHub PRs: agentic multi-pass review with voting, precise inline comments, incremental finding tracking"
repository = "https://github.com/liuchong/hoverstare"
homepage = "https://github.com/liuchong/hoverstare"
documentation = "https://github.com/liuchong/hoverstare/tree/master/specs"
readme = "README.md"
keywords = ["code-review", "github-actions", "llm", "ai", "pull-request"]
categories = ["development-tools", "development-tools::build-utils"]
license-file = "../../LICENSE"

[dependencies]
hoverstare = { version = "0.0.6", path = "../.." }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
