[package]
name = "rig-kimi-probe"
version = "0.1.0"
edition = "2021"

[dependencies]
rig-core = "0.36"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
